DevOps/k8s/helm/helm-values/ingress-nginx/app-ingress-pip.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fsa
  namespace: app
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: "letsencrypt"
    nginx.ingress.kubernetes.io/proxy-buffer-size: "256k"
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
    nginx.ingress.kubernetes.io/use-forwarded-headers: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - 20.223.168.156.nip.io
      secretName: nipio-cert
  rules:
    - host: 20.223.168.156.nip.io
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: honch-backend-svc
                port:
                  number: 8080
          - path: /auth
            pathType: Prefix
            backend:
              service:
                name: fsa-keycloak-http
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fsa-frontend-svc
                port:
                  number: 80
